tercer commit, actualizando parrafo de descripcion del header

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     Alex <br> Colihuinca
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Publicista con más de 5 años de experiencia en Adops, especializado en el marcaje y seguimiento de campañas de marketing digital, involucrándome en desarrollo de proyectos y capacitación de personal, mi enfoque se caracteriza por la dedicación y prolijidad, siempre orientado en lograr los objetivos, mi compromiso con el perfeccionamiento continuo se refleja en la búsqueda constante de oportunidades de capacitación, desafíos y cursos especializados, impulsado por mi curiosidad y una motivación intrínseca por el aprendizaje.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
