--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
     <section id="Acerca-de-mi" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Antecedentes laborales</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            <ul>
+                <li>Direccion: Santa isabel 14, Santiago, RM</li>
+                <li>Numero de contacto: +56 9 4567 2345</li>
+                <li>Correo: alex@gmail.com</li>
+            </ul>
         </p>
 
 
